Replace .getFirst() with .get(0) because the current Java Version 20 does not have .getFirst()